// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WebAuthN Transformer Tests WebAuthN Challenge Tests should only render title and description elements when WebAuthN API is not available 1`] = `
{
  "data": {},
  "dataSchema": {
    "fieldsToExclude": [Function],
    "fieldsToTrim": [],
    "fieldsToValidate": [],
    "submit": {
      "step": "challenge-authenticator",
    },
  },
  "schema": {},
  "uischema": {
    "elements": [
      {
        "options": {
          "content": "oie.verify.webauth.title",
        },
        "type": "Title",
      },
      {
        "options": {
          "class": "ERROR",
          "dataSe": "callout",
          "message": {
            "class": "ERROR",
            "i18n": {
              "key": "oie.webauthn.error.not.supported",
            },
            "message": "oie.webauthn.error.not.supported",
          },
        },
        "type": "InfoBox",
      },
      {
        "elements": [
          {
            "key": "cant-verify",
            "options": {
              "content": {
                "elements": [
                  {
                    "noMargin": true,
                    "options": {
                      "content": "oie.verify.webauthn.cant.verify.biometric.authenticator.title",
                      "level": 2,
                      "visualLevel": 6,
                    },
                    "type": "Heading",
                  },
                  {
                    "noMargin": true,
                    "options": {
                      "content": "oie.verify.webauthn.cant.verify.biometric.authenticator.description1",
                    },
                    "type": "Description",
                  },
                  {
                    "options": {
                      "content": "oie.verify.webauthn.cant.verify.biometric.authenticator.description2",
                    },
                    "type": "Description",
                  },
                  {
                    "noMargin": true,
                    "options": {
                      "content": "oie.verify.webauthn.cant.verify.security.key.title",
                      "level": 2,
                      "visualLevel": 6,
                    },
                    "type": "Heading",
                  },
                  {
                    "options": {
                      "content": "oie.verify.webauthn.cant.verify.security.key.description",
                    },
                    "type": "Description",
                  },
                ],
                "type": "VerticalLayout",
              },
              "id": "cant-verify",
              "summary": "oie.verify.webauthn.cant.verify",
            },
            "type": "AccordionPanel",
          },
        ],
        "type": "Accordion",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;

exports[`WebAuthN Transformer Tests WebAuthN Challenge Tests should render title, description and button elements when WebAuthN API is available 1`] = `
{
  "data": {},
  "dataSchema": {
    "fieldsToExclude": [Function],
    "fieldsToTrim": [],
    "fieldsToValidate": [],
    "submit": {
      "step": "challenge-authenticator",
    },
  },
  "schema": {},
  "uischema": {
    "elements": [
      {
        "options": {
          "content": "oie.verify.webauth.title",
        },
        "type": "Title",
      },
      {
        "contentType": "subtitle",
        "options": {
          "content": "oie.verify.webauthn.instructions",
        },
        "type": "Description",
      },
      {
        "options": {
          "onClick": [Function],
          "step": "challenge-authenticator",
          "submitOnLoad": true,
        },
        "type": "WebAuthNSubmitButton",
      },
      {
        "elements": [
          {
            "key": "cant-verify",
            "options": {
              "content": {
                "elements": [
                  {
                    "noMargin": true,
                    "options": {
                      "content": "oie.verify.webauthn.cant.verify.biometric.authenticator.title",
                      "level": 2,
                      "visualLevel": 6,
                    },
                    "type": "Heading",
                  },
                  {
                    "noMargin": true,
                    "options": {
                      "content": "oie.verify.webauthn.cant.verify.biometric.authenticator.description1",
                    },
                    "type": "Description",
                  },
                  {
                    "options": {
                      "content": "oie.verify.webauthn.cant.verify.biometric.authenticator.description2",
                    },
                    "type": "Description",
                  },
                  {
                    "noMargin": true,
                    "options": {
                      "content": "oie.verify.webauthn.cant.verify.security.key.title",
                      "level": 2,
                      "visualLevel": 6,
                    },
                    "type": "Heading",
                  },
                  {
                    "options": {
                      "content": "oie.verify.webauthn.cant.verify.security.key.description",
                    },
                    "type": "Description",
                  },
                ],
                "type": "VerticalLayout",
              },
              "id": "cant-verify",
              "summary": "oie.verify.webauthn.cant.verify",
            },
            "type": "AccordionPanel",
          },
        ],
        "type": "Accordion",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;

exports[`WebAuthN Transformer Tests WebAuthN Challenge Tests should render title, description, button and can't verify link elements for appName = Okta_Authenticaotr when WebAuthN API is available 1`] = `
{
  "data": {},
  "dataSchema": {
    "fieldsToExclude": [Function],
    "fieldsToTrim": [],
    "fieldsToValidate": [],
    "submit": {
      "step": "challenge-authenticator",
    },
  },
  "schema": {},
  "uischema": {
    "elements": [
      {
        "options": {
          "content": "oie.verify.webauth.title",
        },
        "type": "Title",
      },
      {
        "contentType": "subtitle",
        "options": {
          "content": "oie.verify.webauthn.instructions",
        },
        "type": "Description",
      },
      {
        "options": {
          "onClick": [Function],
          "step": "challenge-authenticator",
          "submitOnLoad": true,
        },
        "type": "WebAuthNSubmitButton",
      },
      {
        "elements": [
          {
            "key": "cant-verify",
            "options": {
              "content": {
                "elements": [
                  {
                    "options": {
                      "items": [
                        "oie.verify.webauthn.cant.verify.enrollment.step1",
                        "oie.verify.webauthn.cant.verify.enrollment.step2",
                        "oie.verify.webauthn.cant.verify.enrollment.step3",
                        "oie.verify.webauthn.cant.verify.enrollment.step4",
                      ],
                      "type": "ol",
                    },
                    "type": "List",
                  },
                ],
                "type": "VerticalLayout",
              },
              "id": "cant-verify",
              "summary": "oie.verify.webauthn.cant.verify",
            },
            "type": "AccordionPanel",
          },
        ],
        "type": "Accordion",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;

exports[`WebAuthN Transformer Tests WebAuthN Challenge Tests should render title, description, button, and user verification elements when WebAuthN API is available in Safari Browser 1`] = `
{
  "data": {},
  "dataSchema": {
    "fieldsToExclude": [Function],
    "fieldsToTrim": [],
    "fieldsToValidate": [],
    "submit": {
      "step": "challenge-authenticator",
    },
  },
  "schema": {},
  "uischema": {
    "elements": [
      {
        "options": {
          "content": "oie.verify.webauth.title",
        },
        "type": "Title",
      },
      {
        "contentType": "subtitle",
        "options": {
          "content": "oie.verify.webauthn.instructions",
        },
        "type": "Description",
      },
      {
        "contentType": "subtitle",
        "options": {
          "content": "oie.verify.webauthn.uv.required.instructions",
        },
        "type": "Description",
      },
      {
        "options": {
          "onClick": [Function],
          "step": "challenge-authenticator",
          "submitOnLoad": false,
        },
        "type": "WebAuthNSubmitButton",
      },
      {
        "elements": [
          {
            "key": "cant-verify",
            "options": {
              "content": {
                "elements": [
                  {
                    "noMargin": true,
                    "options": {
                      "content": "oie.verify.webauthn.cant.verify.biometric.authenticator.title",
                      "level": 2,
                      "visualLevel": 6,
                    },
                    "type": "Heading",
                  },
                  {
                    "noMargin": true,
                    "options": {
                      "content": "oie.verify.webauthn.cant.verify.biometric.authenticator.description1",
                    },
                    "type": "Description",
                  },
                  {
                    "options": {
                      "content": "oie.verify.webauthn.cant.verify.biometric.authenticator.description2",
                    },
                    "type": "Description",
                  },
                  {
                    "noMargin": true,
                    "options": {
                      "content": "oie.verify.webauthn.cant.verify.security.key.title",
                      "level": 2,
                      "visualLevel": 6,
                    },
                    "type": "Heading",
                  },
                  {
                    "options": {
                      "content": "oie.verify.webauthn.cant.verify.security.key.description",
                    },
                    "type": "Description",
                  },
                ],
                "type": "VerticalLayout",
              },
              "id": "cant-verify",
              "summary": "oie.verify.webauthn.cant.verify",
            },
            "type": "AccordionPanel",
          },
        ],
        "type": "Accordion",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;

exports[`WebAuthN Transformer Tests WebAuthN Enroll Tests should only render title and description elements when WebAuthN API is not available 1`] = `
{
  "data": {},
  "dataSchema": {
    "fieldsToExclude": [Function],
    "fieldsToTrim": [],
    "fieldsToValidate": [],
    "submit": {
      "step": "enroll-authenticator",
    },
  },
  "schema": {},
  "uischema": {
    "elements": [
      {
        "options": {
          "content": "oie.enroll.webauthn.title",
        },
        "type": "Title",
      },
      {
        "options": {
          "class": "ERROR",
          "dataSe": "callout",
          "message": {
            "class": "ERROR",
            "i18n": {
              "key": "oie.webauthn.error.not.supported",
            },
            "message": "oie.webauthn.error.not.supported",
          },
        },
        "type": "InfoBox",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;

exports[`WebAuthN Transformer Tests WebAuthN Enroll Tests should render title, description and button elements when WebAuthN API is available 1`] = `
{
  "data": {},
  "dataSchema": {
    "fieldsToExclude": [Function],
    "fieldsToTrim": [],
    "fieldsToValidate": [],
    "submit": {
      "step": "enroll-authenticator",
    },
  },
  "schema": {},
  "uischema": {
    "elements": [
      {
        "options": {
          "content": "oie.enroll.webauthn.title",
        },
        "type": "Title",
      },
      {
        "contentType": "subtitle",
        "options": {
          "content": "oie.enroll.webauthn.instructions",
        },
        "type": "Description",
      },
      {
        "options": {
          "onClick": [Function],
          "step": "enroll-authenticator",
          "submitOnLoad": false,
        },
        "type": "WebAuthNSubmitButton",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;

exports[`WebAuthN Transformer Tests WebAuthN Enroll Tests should render title, description, button and userVerification required elements when WebAuthN API is available 1`] = `
{
  "data": {},
  "dataSchema": {
    "fieldsToExclude": [Function],
    "fieldsToTrim": [],
    "fieldsToValidate": [],
    "submit": {
      "step": "enroll-authenticator",
    },
  },
  "schema": {},
  "uischema": {
    "elements": [
      {
        "options": {
          "content": "oie.enroll.webauthn.title",
        },
        "type": "Title",
      },
      {
        "contentType": "subtitle",
        "options": {
          "content": "oie.enroll.webauthn.instructions",
        },
        "type": "Description",
      },
      {
        "contentType": "subtitle",
        "options": {
          "content": "oie.enroll.webauthn.uv.required.instructions",
        },
        "type": "Description",
      },
      {
        "options": {
          "onClick": [Function],
          "step": "enroll-authenticator",
          "submitOnLoad": false,
        },
        "type": "WebAuthNSubmitButton",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;

exports[`WebAuthN Transformer Tests WebAuthN Enroll Tests should render title, description, button, and callout elements when WebAuthN API is available on MS Edge browser 1`] = `
{
  "data": {},
  "dataSchema": {
    "fieldsToExclude": [Function],
    "fieldsToTrim": [],
    "fieldsToValidate": [],
    "submit": {
      "step": "enroll-authenticator",
    },
  },
  "schema": {},
  "uischema": {
    "elements": [
      {
        "options": {
          "content": "oie.enroll.webauthn.title",
        },
        "type": "Title",
      },
      {
        "contentType": "subtitle",
        "options": {
          "content": "oie.enroll.webauthn.instructions",
        },
        "type": "Description",
      },
      {
        "contentType": "subtitle",
        "options": {
          "content": "oie.enroll.webauthn.instructions.edge",
        },
        "type": "Description",
      },
      {
        "options": {
          "onClick": [Function],
          "step": "enroll-authenticator",
          "submitOnLoad": false,
        },
        "type": "WebAuthNSubmitButton",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;
